Fix: footer was showing over the answer on smaller screen gave main section 200px margin bottom

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,7 @@ main {
     min-width: 50%;
     max-width: 70%;
     position: relative;
-    margin-bottom: 150px;
+    margin-bottom: 200px;
 }
 
 .center {
